# chessy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TACTICAL_ANALYSIS.md  analyze_tactics.rs  bench_profile  bench_profile.rs  chessy_wrapper.sh  play_match.sh  reproduce_issue.sh  simulate_game.sh  test_promo_gen  test_promo_gen.rs  test_promotion  test_promotion.rs  test_promotion2  test_promotion2.rs  uci_test.sh
.cargo/: config.toml
src/: bitboard.rs  board.rs  castling.rs  evaluation.rs  lib.rs  magic.rs  main.rs  move.rs  movegen.rs  movelist.rs  moveorder.rs  piece.rs  position.rs  search.rs  transposition.rs  utils.rs  zobrist.rs
