[package]
name = "chessy"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1.10"
num_cpus = "1.16"

[features]
default = []
simd = []

[[bin]]
name = "chessy"
path = "src/main.rs"

[[bin]]
name = "chessy_match"
path = "src/bin/chessy_match.rs"
